# ChangeLog for app-office/koffice
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/koffice/Attic/ChangeLog,v 1.242 2008/11/28 03:29:52 dirtyepic Exp $

  28 Nov 2008; Ryan Hill <dirtyepic@gentoo.org>
  +files/koffice-1.6.3-gcc43.patch, koffice-1.6.3-r2.ebuild:
  Fix building w/ gcc-4.3. Bug #228839.

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  koffice-1.6.3-r2.ebuild:
  ppc stable, bug #198409

  13 Nov 2007; Dawid Węgliński <cla@gentoo.org> koffice-1.6.3-r2.ebuild:
  Stable on x86 (bug #198409)

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> koffice-1.6.3-r2.ebuild:
  alpha/ia64/sparc stable wrt security #198409

  12 Nov 2007; Markus Rothe <corsair@gentoo.org> koffice-1.6.3-r2.ebuild:
  Stable on ppc64; bug #198409

  12 Nov 2007; Jeroen Roovers <jer@gentoo.org> koffice-1.6.3-r2.ebuild:
  Stable for HPPA (bug #198409).

  11 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org>
  koffice-1.6.3-r2.ebuild:
  Marked stable on amd64 as per security bug 198409.

*koffice-1.6.3-r2 (11 Nov 2007)

  11 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/koffice-1.6.3-xpdf2-CVE-2007-4352-5392-5393.diff, metadata.xml,
  +koffice-1.6.3-r2.ebuild:
  Added an upstream patch to fix security bug 198409. Fixed the desktop files
  as per bug 190006. Thanks to gentoofan23 for providing patches!

  12 Aug 2007; Steve Dibb <beandog@gentoo.org> koffice-1.6.3-r1.ebuild:
  amd64 stable, security bug 187139

  03 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  koffice-1.6.3-r1.ebuild:
  ppc stable, bug #187139

  01 Aug 2007; Raúl Porcel <armin76@gentoo.org> koffice-1.6.3-r1.ebuild:
  alpha/ia64/x86 stable wrt #187139

  01 Aug 2007; Markus Rothe <corsair@gentoo.org> koffice-1.6.3-r1.ebuild:
  Stable on ppc64; bug #187139

  01 Aug 2007; Jeroen Roovers <jer@gentoo.org> koffice-1.6.3-r1.ebuild:
  Stable for HPPA (bug #187139).
