@@ -1,6 +1,10 @@
 # ChangeLog for app-office/koffice
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice/Attic/ChangeLog,v 1.242 2008/11/28 03:29:52 dirtyepic Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice/Attic/ChangeLog,v 1.243 2009/07/01 12:07:04 tampakrap Exp $
+
+  01 Jul 2009; Theo Chatzimichos <tampakrap@gentoo.org>
+  -koffice-1.6.1-r1.ebuild, -koffice-1.6.3.ebuild, -koffice-1.6.3-r1.ebuild:
+  Remove old
 
   28 Nov 2008; Ryan Hill <dirtyepic@gentoo.org>
   +files/koffice-1.6.3-gcc43.patch, koffice-1.6.3-r2.ebuild:
